# fastapi_urlshortener

./: .gitignore  Dockerfile  README.md  docker-compose.pytest.yml  docker-compose.yml  main.py  pyproject.toml  test.env
alembic/: env.py
alembic/versions/: 0d2c8a94c44b_initial.py  6e1647f5f35c_initial.py  99d63c0261fa_initial.py  faef9ecf8cbd_initial.py
api/api_v1/: api.py  deps.py
api/api_v1/endpoints/: oauth2.py  urls.py  users.py
core/: settings.py
db/: __init__.py  base.py  urls.py  users.py
repositories/: base.py  urls.py  users.py
schemas/: __init__.py  urls.py  users.py
services/: base.py  urls.py  users.py
tests/: conftest.py
tests/test_api/: test_api.py
