[tool.poetry]
name = "fastapi_urlshortener"
version = "0.1.0"
description = ""
authors = ["Damir Kuzovatov <kuz.damir.01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.75.1"}
psycopg-binary = "^3.0.11"
asyncpg = "^0.25.0"
SQLAlchemy = {extras = ["async"], version = "^1.4.35"}
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
passlib = "^1.7.4"
PyJWT = "^2.3.0"
pytest = "^7.1.1"
pytest-dependency = "^0.5.1"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
